Migration e Configuração do dbContext pra a tabela restaurant

--- a/OdeToFood.Web/appsettings.json
+++ b/OdeToFood.Web/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OdeToFoodDb" : "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OdeToFoodDb;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "Message":  "Hello, World appsetting!"
+  "Message": "Hello, World appsetting!"
 }
